--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 	<style type="text/css" media="screen">
 		body{
-			background-image:linear-gradient( rgba(0,0,0,0.3), rgba(0,0,0,0.3)),url('bmi.jpg');
+			background-image:linear-gradient( rgba(0,0,0,0.3), rgba(0,0,0,0.3)),url('image/bmi.jpg');
 			background-repeat: no-repeat;
 			background-size: cover;
 			background-position: center;
